<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="com.example.calculator.util.viewModel.MainViewModel" />
    </data>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="5"
            android:layout_margin="2dp"
            android:background="@color/black"
            tools:ignore="UnusedAttribute">

        <!-- First line -->
        <Button
                android:id="@+id/button_clear"
                android:text="@string/Clear"
                style="@style/FunctionalButtons"
                android:onClick="@{() -> viewModel.clear()}"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_opposite"
                android:text="@string/ChangeTheSign"
                style="@style/FunctionalButtons"
                android:onClick="@{() -> viewModel.changeSign()}"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_percent"
                android:text="@string/Percent"
                style="@style/FunctionalButtons"
                android:onClick='@{() -> viewModel.add("%", true)}'
                android:layout_column="2"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_share"
                android:text="@string/Share"
                style="@style/FunctionalButtons"
                android:onClick='@{() -> viewModel.add("/", true)}'
                android:layout_column="3"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />

        <!-- Second line -->

        <Button
                android:id="@+id/button_seven"
                android:text="@string/Seven"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("7", false)}'
                android:layout_column="0"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_eight"
                android:text="@string/Eight"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("8", false)}'
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_nine"
                android:text="@string/Nine"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("9", false)}'
                android:layout_column="2"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_multiply"
                android:text="@string/Multiply"
                style="@style/FunctionalButtons"
                android:onClick='@{() -> viewModel.add("*", true)}'
                android:layout_column="3"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />

        <!-- Third line -->

        <Button
                android:id="@+id/button_four"
                android:text="@string/Four"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("4", false)}'
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_five"
                android:text="@string/Five"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("5", false)}'
                android:layout_column="1"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_six"
                android:text="@string/Six"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("6", false)}'
                android:layout_column="2"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_minus"
                android:text="@string/Minus"
                style="@style/FunctionalButtons"
                android:onClick='@{() -> viewModel.add("-", true)}'
                android:layout_column="3"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />

        <!-- Fourth line -->

        <Button
                android:id="@+id/button_one"
                android:text="@string/One"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("1", false)}'
                android:layout_column="0"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_two"
                android:text="@string/Two"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("2", false)}'
                android:layout_column="1"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_three"
                android:text="@string/Three"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("3", false)}'
                android:layout_column="2"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_plus"
                android:text="@string/Plus"
                style="@style/FunctionalButtons"
                android:onClick='@{() -> viewModel.add("+", true)}'
                android:layout_column="3"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />

        <!-- Fifth line -->

        <Button
                android:id="@+id/button_zero"
                android:layout_gravity="fill_horizontal"
                android:text="@string/Zero"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add("0", false)}'
                android:layout_column="0"
                android:layout_row="4"
                android:layout_columnWeight="2"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_point"
                android:text="@string/Point"
                style="@style/NumberButtons"
                android:onClick='@{() -> viewModel.add(".", false)}'
                android:layout_column="1"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <Button
                android:id="@+id/button_equally"
                android:text="@string/Equally"
                style="@style/NumberButtons"
                android:onClick="@{() -> viewModel.result()}"
                android:layout_column="2"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
        <ImageButton
                android:contentDescription="@string/erase"
                android:id="@+id/button_remove"
                android:src="@drawable/ic_erase"
                style="@style/FunctionalButtons"
                android:onClick="@{() -> viewModel.erase()}"
                android:layout_column="3"
                android:layout_row="4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="1dp" />
    </GridLayout>
</layout>